--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,8 +7,6 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
 
-
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -20,6 +18,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.IndoorWifiPositioning"
         tools:targetApi="31">
+        <activity
+            android:name=".showwifidata"
+            android:exported="false" />
         <activity
             android:name=".RealTimeActivity"
             android:exported="false" />
